css/index.css
:root {
  color: whitesmoke;
  font-family: monospace;
}
body {
  background-color: black;
}
h1 {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  animation: fadein 1s;
}
@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes blink {
  50% {
    opacity: 0;
  }
}
.blink {
  animation: blink 2s linear infinite;
}
footer {
  position: absolute;
  bottom: 1em;
  right: 1em;
}

